# heimdall

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  NEWS  README.md  bootstrap  configure.ac  cudalt.py  flake.nix
Applications/: CMakeLists.txt  Candidates.cpp  Makefile.am  candidate_profiler.cpp  coincidencer.cpp  coincidencer_client.cpp  fil2pgm.cpp  generate_dmlist.cpp  heimdall.cpp
Applications/hd/: Candidates.hpp
Formats/: CMakeLists.txt  Makefile.am  PSRDadaRingBuffer.cpp  SigprocFile.cpp  giant_maker.cpp
Formats/hd/: DataSource.hpp  PSRDadaRingBuffer.h  PSRDadaRingBuffer.hpp  SigprocFile.hpp  header.hpp
Network/: CMakeLists.txt  ClientSocket.cpp  ServerSocket.cpp  Socket.cpp
Network/hd/: ClientSocket.hpp  ServerSocket.hpp  Socket.hpp  SocketException.hpp
Pipeline/: CMakeLists.txt  clean_filterbank_rfi.cu  default_params.cpp  error.cpp  find_giants.cu  get_rms.cu  label_candidate_clusters.cu  matched_filter.cu  measure_bandpass.cu  median_filter.cu  merge_candidates.cu  parse_command_line.cpp  pipeline.cu  remove_baseline.cu
Pipeline/hd/: are_coincident.cuh  clean_filterbank_rfi.hpp  default_params.hpp  error.hpp  find_giants.hpp  get_rms.hpp  label_candidate_clusters.hpp  matched_filter.hpp  maths.hpp  measure_bandpass.hpp  median_filter.hpp  merge_candidates.hpp  params.hpp  parse_command_line.hpp  pipeline.hpp  remove_baseline.hpp  stopwatch.hpp  strided_range.hpp  types.hpp  write_time_series.hpp
